# Real-Estate-AI-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  HALLOWEEN_THEME_IMPLEMENTATION.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_out.txt  vercel.json
.kiro/hooks/: auto-commit.json  auto-git-commit-push.kiro.hook  readme-auto-update.json  readme-auto-update.kiro.hook  spec-sync.json
.kiro/specs/ai-real-estate-copilot/: design.md  requirements.md  tasks.md
.kiro/steering/: code-style.md  deep-agents-reference.md  production-practices.md  project-context.md
agent_data/decorations/: property_001_decorated.json  property_002_decorated.json  property_003_decorated.json  property_004_decorated.json
agent_data/locations/: property_001_location.json  property_001_location_new.json  property_002_location.json  property_002_location_new.json  property_003_location.json  property_004_location.json
agent_data/properties/: property_001.json  property_002.json
api/: index.py
decorated_images/: property_001_001_halloween.json  property_001_002_halloween.json  property_001_003_halloween.json  property_001_halloween.json  property_002_halloween.json  property_003_halloween.json  property_004_halloween.json  property_006_halloween.json  property_007_halloween.json  property_008_halloween.json
frontend/: Dockerfile  index.html  middleware.ts  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  middleware.ts
frontend/src/api/: agent.ts
frontend/src/components/: AgentForm.tsx  ChatInterface.tsx  DesignComparison.tsx  Features.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  LocationAnalysis.tsx  Navigation.tsx  PropertyCard.tsx  PropertyGrid.tsx  PropertyReportView.tsx  PropertyReviewPanel.tsx  PropertySearchForm.tsx  PropertySelector.tsx  SearchForm.tsx
frontend/src/components/ui/: HalloweenCard.tsx  HalloweenIcons.tsx  SpookyButton.tsx
frontend/src/pages/: AnalysisPage.tsx  _app.tsx  _document.tsx  agent.tsx  index.tsx
frontend/src/pages/profile/: [[...index]].tsx
frontend/src/styles/: globals.css
src/: __init__.py  agent.py  guardrails.py  main.py  models.py  prompts.py  tools.py  utils.py
tests/: test_google_places.py  test_mapbox_tools.py
(+2 files in other folders)
