[project]
name = "ai-real-estate-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.4.4",
    "langchain-mcp-adapters>=0.1.0",
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.10",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "tavily-python>=0.7.22",
    "uvicorn>=0.41.0",
    "langsmith>=0.7.10",
    "pillow>=12.1.1",
    "mcp>=1.26.0",
    "adapter>=0.1",
    "langchain-aws>=1.3.1",
    "langsmith-fetch>=0.3.1",
    "browser-use>=0.11.13",
]
