[project]
name = "ai-real-estate-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.5.3",
    "langchain-mcp-adapters>=0.2.2",
    "fastapi>=0.136.0",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tavily-python>=0.7.23",
    "uvicorn>=0.44.0",
    "langsmith>=0.7.32",
    "pillow>=12.2.0",
    "mcp>=1.26.0",
    "adapter>=0.1",
    "langchain-aws>=1.4.4",
    "langsmith-fetch>=0.3.1", 
    "browser-use-sdk>=3.4.3",
    "google-genai>=1.65.0",
    "langchain-openrouter>=0.2.1",
]

[tool.uv]
override-dependencies = [
    "anthropic>=0.96.0",
    "python-dotenv>=1.2.1",
    "pillow>=12.2.0"
]
